# climate-shift

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  instagram_captions.txt  mkdocs.yml  plot_climate_maps.py  plot_climate_shift.py  pyproject.toml  requirements_glacier.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  glacier_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  index.md
glacier_toolkit/: __init__.py  config.py  style.py
glacier_toolkit/acquire/: __init__.py  dem.py  glims.py  glims_gee.py  glims_regions.py  hugonnet.py  landsat.py  landsat_batch.py  sentinel.py
glacier_toolkit/analyze/: __init__.py  climate_link.py  correlation.py  glacier_area.py  lake_area.py  ndsi.py  ndwi.py  sensitivity.py  statistics.py
glacier_toolkit/glof/: __init__.py  lake_detection.py  lake_timeseries.py  proximity.py  risk_classify.py
glacier_toolkit/pipelines/: __init__.py  run_andes_glof.py  run_global.py  run_global_overview.py  run_paper.py  run_sensitivity.py  run_single_glacier.py  run_social_post.py
glacier_toolkit/validate/: __init__.py  glims_validation.py
glacier_toolkit/visualize/: __init__.py  carousel.py  comparison_maps.py  ghost_ice.py  global_dashboard.py  paper_figures.py  scale_figures.py  timelapse.py
scripts/: download_all_glaciers.py
tests/: conftest.py  test_config.py  test_correlation.py  test_glacier_area.py  test_glof.py  test_ndsi.py  test_ndwi.py  test_sensitivity.py  test_statistics.py  test_validation.py
