[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ──────────────────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────────────────
[project]
name = "glacier-toolkit"
version = "0.1.0"
description = "Global glacier retreat monitoring toolkit — satellite analysis, GLOF risk, and Instagram-ready visualizations for any glacier on Earth"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Bijan Fallah", email = "bijan.fallah@gmail.com" },
]
keywords = [
    "glacier",
    "climate-change",
    "remote-sensing",
    "satellite",
    "landsat",
    "sentinel-2",
    "glof",
    "cryosphere",
    "earth-observation",
    "ndsi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Core runtime dependencies (always required)
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "xarray>=2023.1",
    "scikit-image>=0.21",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "requests>=2.31",
]

# Optional dependency groups
[project.optional-dependencies]
geo = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",
    "cartopy>=0.22",
    "netCDF4>=1.6",
]
gee = [
    "earthengine-api>=0.1.380",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]
all = [
    "glacier-toolkit[geo,gee,dev]",
]

[project.urls]
Homepage = "https://github.com/bijanf/climate-shift"
Repository = "https://github.com/bijanf/climate-shift"
Issues = "https://github.com/bijanf/climate-shift/issues"

[project.scripts]
glacier-analyze = "glacier_toolkit.pipelines.run_single_glacier:main"
glacier-global = "glacier_toolkit.pipelines.run_global_overview:main"
glacier-glof = "glacier_toolkit.pipelines.run_andes_glof:main"
glacier-social = "glacier_toolkit.pipelines.run_social_post:main"
glacier-paper = "glacier_toolkit.pipelines.run_paper:main"
glacier-sensitivity = "glacier_toolkit.pipelines.run_sensitivity:main"

# ──────────────────────────────────────────────────────────────────────────────
# Hatchling — package discovery
# ──────────────────────────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["glacier_toolkit", "glacier_toolkit/validate"]

# ──────────────────────────────────────────────────────────────────────────────
# Ruff — linting + formatting (replaces black, isort, flake8)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "plot_climate_shift.py",   # legacy script — has 1k+ lines, gradual cleanup
    "plot_climate_maps.py",    # legacy script — gradual cleanup
    "build",
    "dist",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults (matplotlib pattern)
    "B904",   # raise from (allowed for clarity)
    "RUF001", # ambiguous unicode in strings (we use ², °, —, etc intentionally)
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "RUF012", # mutable class attributes (false positive for dicts)
    "RUF059", # unused unpacked vars (acceptable in tests for clarity)
    "SIM108", # ternary if-else (sometimes if-else is clearer)
    "C408",   # unnecessary dict() call (sometimes clearer than {})
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401", "F811"]  # test files allow more flexibility
"glacier_toolkit/pipelines/*" = ["E402"]  # pipelines do imports inside functions
"__init__.py" = ["F401"]  # unused imports OK in init files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ──────────────────────────────────────────────────────────────────────────────
# Mypy — type checking
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = true
exclude = [
    "plot_climate_shift.py",
    "plot_climate_maps.py",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ──────────────────────────────────────────────────────────────────────────────
# Pytest — test runner
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring network or external services",
    "gee: marks tests requiring Google Earth Engine authentication",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ──────────────────────────────────────────────────────────────────────────────
# Coverage
# ──────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["glacier_toolkit"]
omit = [
    "*/pipelines/*",     # pipelines are CLI entrypoints, hard to test
    "*/__init__.py",
    "*/acquire/landsat.py",  # requires GEE
    "*/acquire/sentinel.py", # requires CDSE
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 1
